
Version (SVN)
-------------

XML:   Fixed bug CASTOR-1469 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added new property to castor.properties to disable use of '.castor.xml' selectively.
       Details: http://jira.codehaus.org/browse/CASTOR-1475
       (Werner - 20060713)

JDO:   Resolved issue CASTOR-1473 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Added posibility to retrieve ClassDescriptor.
       Details: http://jira.codehaus.org/browse/CASTOR-1473
       (Ralf - 20060710)

XML:   Fixed bug CASTOR-1470 using contribution from David Buschman [dbuschman7@yahoo.com]
       Added support for Java 5 compatible source code generation.
       Details: http://jira.codehaus.org/browse/CASTOR-1470
       (Werner - 20060707)

JDO:   Resolved issue CASTOR-1472 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Allowed to specify base URI at JDOManager.loadConfiguration().
       Details: http://jira.codehaus.org/browse/CASTOR-1472
       (Ralf - 20060706)

JDO:   Fixed bug CASTOR-1458 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Integrate new JDOClassDescriptorResolver with existing Castor JDO code.
       Details: http://jira.codehaus.org/browse/CASTOR-1458
       (Werner - 20060629)

JDO:   Fixed bug CASTOR-1457 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Introduce JDO specific ClassDescriptporResolver (and refactor class hierarchy in this area).
       Details: http://jira.codehaus.org/browse/CASTOR-1457
       (Werner - 20060628)

JDO:   Fixed bug CASTOR-1465 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Changed transaction handling semantics in CacheManager.expireCache(Class, Object[]).
       Details: http://jira.codehaus.org/browse/CASTOR-1465
       (Werner - 20060626)

JDO:   Fixed bug CASTOR-1464 using contribution from Werner Guttmann [werner.guttmann@gmx.net]